Correct ordering and partial resolution for whitespace

--- a/css/index.css
+++ b/css/index.css
@@ -286,26 +286,26 @@ footer {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		padding: 10px;
 	}
 
 	a {
 		margin-bottom: 20px;
+		order:1;
+	}
+
+	button:hover {
+		color: white;
+		background-color: black;
 	}
 
 	.logo {
 	display: flex;
 	width: 50%;
 }
-	header {
-		display: flex;
-		align-content: center;
-		justify-content: center;
-	}
-
 
 	.top-img {
-		visibility: hidden;
-		width: 500px;
+		display: none;
 	}
 	
 	.top-section {
@@ -330,7 +330,8 @@ footer {
 
 	.bottom-section {
 		display: flex;
-		flex-flow: column nowrap;
+		flex-flow: column wrap;
+		width: 500px;
 	}
 	
 	.services {
